bug fix with Integer.valueOf(rank), should have been new Integer(rank)
git-svn-id: file:///home/svn-repositories/biojava/biojava-live/trunk@3458 7c6358e6-4a41-0410-a743-a5b2a554c398